Date	Added

2006/10/24
	* Changed the way the skill_steal_max_tries work. Now it actually MEANS the
	  max number of steal tries, use 0 to disable (unlimited tries). [Skotlex]
	* Changed the default of skill_steal_max_tries to 0 as there's no proof
	  anywhere that there should be such a limit. [Skotlex]
2006/10/20
	* Added config setting "summon_flora_setting" (skill.conf), with it you can
	  decide now two things: a. Whether or not players can harm your floras
	  outside versus grounds, and b. Whether or not you can summon out and mix
	  different types of plants at the same time. [Skotlex]
2006/10/19
	* Commented out the monster_noteleport mapflag from the guild castles as
	  this is the Aegis behaviour [Skotlex]
2006/10/18
	* Added monster_noteleport mapflag to the guild castle maps to prevent
	  "avoiding MVPs" by forcing them to teleport from rude-attacks. [Skotlex]
2006/10/16
	* Added &16 to the default of the emergency_call setting (skill.conf)
	  [Skotlex]
2006/10/12
	* Added Homunculus atcommands [Playtester]
2006/10/11
	* Removed useless inter_athena settings (they were doing absolutely
	  nothing): read_gm_interval, gm_db, gm_db_level, gm_db_account_id,
	  use_new_sql_db [Skotlex]
2006/10/06
	* status_cast_cancel is now a type 4 (object bitmasks) setting
	  (status.conf). [Skotlex]
2006/10/06
	* Removed gm_all_skill_add_abra which was doing nothing anyway. [Skotlex]
2006/10/03
	* Renamed setting delay_dependon_dex to delay_dependon_agi, the delay of
	  skills is reduced now (when enabled) by AGI instead of DEX, which makes a
	  lot more sense than DEX. [Skotlex]
2006/09/25
	* Removed config setting allow_atcommand_when_mute as it's no longer used
	  (see manner_system in misc.conf for it's replacement) [Skotlex]
2006/09/19
	* Removed setting ban_spoof_namer (as now invalid chat packets just cause
	  the sending character to be disconnected). [Skotlex]
2006/09/18
	* The new socket update code includes support for two new config settings