@@ -4,6 +4,17 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/10/25
+	- Made the exp bonus settings be adjustable: [Skotlex]
+	- exp_bonus_attacker: Indicates how much additional exp a mob gives per
+	  additional attacker (eg: 10 -> +10%*attacker)
+	- exp_bonus_max_attacker: Indicates at which number of attackers the bonus
+	  is capped (eg: 5 -> 5 attackers, so a mob yield the same exp whether 5 or
+	  10 people attack it)
+	- Changed the way the party_even_share_bonus setting works. It now uses a
+	  simple linear bonus increase (eg: 10 -> +10%*party member)
+	- The defaults are as explained by Tharis: +25%/attacker, capped at 12
+	  attackers, no party bonus. The first two can be found in exp.conf, the last
+	  one was left in party.conf
 	* MG_STONECURSE and NPC_PETRIFYATTACK now use time1 to specify the
 	  "petrifying time". This value has been set to 5 seconds. [Skotlex]
 	* Now when SC_STONE is triggered from status-change cards, it's petrifying
