@@ -57,11 +57,8 @@ party_item_share_type: 0
 // A character's idle status is reset upon item use/skill use/attack (auto attack counts too)/movement.
 idle_no_share: no
 
-// Use the alternate experience even share bonus equation?
-// When multiple characters even share experience within a party, there's an experience bonus of 10% per additional teammate.
-// Setting this to other than 0 uses a different experience bonus equation of the form: bonus*c*(c-1)/10 (where c is the total
-// count of players to share experience). With bonus = 25 in a full party (c = 12) the total bonus is +25*12*11/10 = +330%,
-// which means the total exp gained is 430% of the original, and each party member receives ~35% of the original mob's experience.
+// Give additional experience bonus per party-member involved on even-share parties?
+// (eg: If set to 10, a even-share party of 5 people will receive +40% exp)
 party_even_share_bonus: 0
 
 // If a party uses a skill with penalties do they apply? (Note 1)
